Fixed letter spacing

--- a/app/styles/components/koenig.css
+++ b/app/styles/components/koenig.css
@@ -1222,6 +1222,7 @@
     font-size: 1.5rem;
     line-height: 1.5em;
     font-weight: 600;
+    letter-spacing: 0;
 }
 
 .kg-bookmark-container:hover .kg-bookmark-title {
@@ -1434,6 +1435,7 @@
     padding: 4px;
     border: 0;
     font-size: 1.5rem;
+    letter-spacing: 0;
     font-weight: 500;
     text-align: center;
     user-select: auto;
@@ -1445,6 +1447,7 @@
     margin-right: .8rem;
     color: var(--black);
     font-size: 1.5rem;
+    letter-spacing: 0;
     font-weight: 400;
     user-select: auto;
 }
@@ -1454,6 +1457,7 @@
     padding: 4px 12px;
     color: var(--black);
     font-size: 1.5rem;
+    letter-spacing: 0;
     font-weight: 400;
 }
 
@@ -1468,6 +1472,7 @@
 
 .kg-email-cta-card .gh-btn-accent span {
     font-size: 1.5rem;
+    letter-spacing: 0;
     height: 40px;
     line-height: 40px;
     padding: 0 20px;
@@ -1882,6 +1887,7 @@ button.emoji-picker__category-button.active {
 
 .kg-button-card .gh-btn span {
     font-size: 1.5rem;
+    letter-spacing: 0;
     height: 40px;
     line-height: 40px;
     padding: 0 20px;
@@ -2824,6 +2830,7 @@ button.emoji-picker__category-button.active {
     color: var(--red);
     font-family: "Inter", -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Droid Sans,Helvetica Neue,sans-serif;
     font-size: 1.5rem;
+    letter-spacing: 0;
     font-weight: 600;
     line-height: 1.6em;
     text-align: center;
