--- a/app/styles/layouts/whatsnew.css
+++ b/app/styles/layouts/whatsnew.css
@@ -120,6 +120,7 @@
     flex-grow: 2;
     color: var(--darkgrey);
     font-size: 1.5rem;
+    letter-spacing: 0;
     margin-top: -24px;
 }
 
@@ -127,6 +128,7 @@
     display: flex;
     align-items: center;
     font-size: 1.5rem;
+    letter-spacing: 0;
     line-height: 1.3em;
     font-weight: 700;
     margin: 0;
